# blescanner-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-postgres  README.md  blescanner.sh  docker-compose.yml
.github/workflows/: main.yml
db/: schema.sql  setup.sh
frontend/: .eslintrc  Dockerfile-frontend  next.config.js  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.server.json
frontend/.next/server/pages/: index.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/pages/: _app.js
frontend/.next/static/webpack/: aabcebdd53dfcfdafb49.hot-update.json
frontend/.next/static/webpack/pages/: index.1ddca26069cd7c4711c5.hot-update.js  index.895a1f77994869a83f07.hot-update.js  index.a66bd95ac7f48ca5d519.hot-update.js  index.a9355f31ec530b198a72.hot-update.js  (+1 more)
frontend/src/components/: Dashboard.tsx  Footer.tsx  Header.tsx  Layout.tsx  Title.tsx
frontend/src/entities/: device_logs.ts
frontend/src/models/: components.ts  device_logs.ts
frontend/src/pages/: index.tsx
frontend/src/repositories/: device_logs.ts
frontend/src/usecases/: device_logs.ts
migrations/2021-01-31-035211_add_device_logs/: down.sql  up.sql
migrations/2021-02-08-020757_create_device_logs/: up.sql
src/: .env.example  README.md  db.rs  errors.rs  lib.rs  main.rs  models.rs  repositories.rs
src/db/: config.rs  schema.rs
src/handlers/: device_logs.rs
src/models/: device_logs.rs  mod.rs
src/repositories/: device_logs.rs  mod.rs
src/tests/: device_logs.rs
src/usecases/: device_logs.rs
